# recursive_build_sum

./: Cargo.toml  README.md  r
languages/bash/: README.md  recursive-build-sum.sh
languages/c/: README.md  recursive-build-sum.c  sum
languages/cpp/: README.md  recursive-build-sum.cpp
languages/dart/: README.md  recursive-build-sum.dart
languages/go/: README.md  main.go
languages/java/: Main.java  README.md
languages/js/: README.md  recursive-build-sum.js
languages/lua/: README.md  recursive-build-sum.lua
languages/perl/: README.md  recursive-build-sum.pl
languages/php/: README.md  recursive-build-sum.php
languages/python/: README.md  recursive-build-sum.py
languages/ruby/: README.md
languages/rust/: Cargo.toml  README.md
src/: main.rs
