[package]
name = "recursive_build_sum"
description = "we have a recursive function to print all the ways we can build an input number with adding of our given array numbers."
repository = "https://github.com/hctilg/recursive_build_sum"
keywords = ["recursive", "numbers", "sum"]
readme = "README.md"
license = "GPL-3.0"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ...